[package]
name = "github-parts"
version = "0.2.0"
edition = "2021"

description = "Types and actions to interact with GitHub"
repository = "https://github.com/devxbots/github-parts"
license = "MIT or Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# github-parts is currently in a prototyping phase, during which we won't
# release it to crates.io yet.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
secrecy = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
