[package]
name = "github-parts"
version = "0.3.0"
edition = "2021"

description = "Types and actions to interact with GitHub"
repository = "https://github.com/devxbots/github-parts"
license = "MIT or Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
]

# github-parts is currently in a prototyping phase, during which we won't
# release it to crates.io yet.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
getset = "0.1.2"
jsonwebtoken = "8.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"

[dev-dependencies]
mockito = "0.31.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
